@@ -80,6 +80,7 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
     template_shift_2 = template_shift + jitter_range
     nb_ss_bins        = params.getint('clustering', 'nb_ss_bins')
     use_hanning      = params.getboolean('detection', 'hanning')
+    use_savgol       = params.getboolean('clustering', 'savgol')
     data_file.open()
     #################################################################
 
@@ -98,6 +99,10 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
 
     if use_hanning:
         hanning_filter = numpy.hanning(N_t)[:, numpy.newaxis]
+
+    if use_savgol:
+        savgol_window = params.getint('clustering', 'savgol_window')
+        savgol_filter = numpy.hanning(N_t)**3
 
     if sign_peaks in ['negative', 'both']:
         basis['proj_neg'], basis['rec_neg'] = io.load_data(params, 'basis')
@@ -410,13 +415,14 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
                                     extremas = local_chunk[vicinity_peaks, vicinity_extremas]
 
                                     nearby = numpy.in1d(vicinity_extremas, indices)
-                                    to_consider = extremas[nearby]
+                                    to_consider = extremas[nearby]/thresholds[vicinity_extremas[nearby]]
+
                                     if len(to_consider) > 0:
                                         if negative_peak:
-                                            if numpy.min(to_consider) < local_chunk[peak, elec]:
+                                            if numpy.min(to_consider) < local_chunk[peak, elec]/thresholds[elec]:
                                                 is_isolated = False
                                         else:
-                                            if numpy.max(to_consider) > local_chunk[peak, elec]:
+                                            if numpy.max(to_consider) > local_chunk[peak, elec]/thresholds[elec]:
                                                 is_isolated = False
 
                                 if is_isolated:
@@ -817,6 +823,9 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
         print_and_log(lines, 'info', logger)
         print_and_log(["Estimating the templates with the %s procedure ..." %extraction], 'default', logger)
 
+        if use_savgol:
+            print_and_log(["Templates will be smoothed by Savitzky Golay Filtering ..."], 'debug', logger)
+
     if extraction in ['median-raw', 'median-pca', 'mean-raw', 'mean-pca']:
 
         total_nb_clusters = int(comm.bcast(numpy.array([int(numpy.sum(gdata3))], dtype=numpy.int32), root=0)[0])
@@ -908,6 +917,19 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
                         sub_data        = io.get_stas(params, times_i, labels_i, ielec, neighs=indices, nodes=nodes, pos=p)
                         first_component = numpy.mean(sub_data, 0)
                         tmp_templates   = first_component
+
+                    if use_savgol: 
+                        if extraction in ['median-raw', 'mean-raw']:
+                            to_filter = first_component
+                        elif extraction in ['median-pca', 'mean-pca']:
+                            to_filter = tmp_templates
+
+                        if savgol_window > 3:
+                            for i in range(len(to_filter)):
+                                tmp = scipy.signal.savgol_filter(to_filter[i], savgol_window, 3)
+                                to_filter[i] = savgol_filter*to_filter[i] + (1 - savgol_filter)*tmp
+
+                        tmp_templates = to_filter
 
                     if p == 'neg':
                         tmpidx = numpy.unravel_index(tmp_templates.argmin(), tmp_templates.shape)
