@@ -102,10 +102,10 @@ def get_stas(params, times_i, labels_i, src, neighs, nodes=None, mean_mode=False
         cdata = numpy.linspace(-jitter_range, jitter_range, int(over_factor*2*jitter_range))
         xdata = numpy.arange(-template_shift_2, template_shift_2 + 1)
         xoff  = len(cdata) / 2.
-        factor = len(neighs)*duration*(smoothing_factor*numpy.mean(mads[neighs]))**2
+        factor = len(neighs)*duration*(smoothing_factor*numpy.median(mads[neighs]))**2
     else:
         xdata = numpy.arange(-template_shift, template_shift + 1)
-        factor = len(neighs)*N_t*(smoothing_factor*numpy.mean(mads[neighs]))**2
+        factor = len(neighs)*N_t*(smoothing_factor*numpy.median(mads[neighs]))**2
 
     idx   = numpy.where(neighs == src)[0]
     ydata = numpy.arange(len(neighs))
